# nimBLE

./: CMakeLists.txt  Kconfig  SOUP  prj.conf  west.yaml
boards/arm/nimble_dk/: Kconfig.board  Kconfig.defconfig  board.cmake  nimble_dk.dts  nimble_dk.yaml  nimble_dk_defconfig
dts/bindings/: adi,ltc3220.yaml  juskim,motors.yaml  mt,mcp73831.yaml  vendor-prefixes.txt
include/driver/bat_charger/: bat_charger.h  mcp73831.h
include/driver/led_drivers/: led_drivers.h  ltc3220.h
include/driver/motors/: motors_drv.h
include/lib/ble/: ble_lib.h  ble_uart.h
include/lib/misc/: shell_lib.h  soc_lib.h
include/lib/uart/: uart_lib.h
include/profile/: tinyrc.h
src/: CMakeLists.txt  Kconfig  main.c
src/driver/: Kconfig
src/driver/bat_charger/: Kconfig  mcp73831.c
src/driver/led_drivers/: Kconfig  led_drivers_shell.c  ltc3220.c
src/driver/motors/: Kconfig  motors_drv.c  motors_drv_shell.c
src/lib/: CMakeLists.txt  Kconfig
src/lib/ble/: Kconfig  ble_lib.c  ble_shell.c  ble_uart.c
src/lib/misc/: shell_lib.c  soc_lib.c
src/lib/uart/: CMakeLists.txt  uart_async_adapter.c  uart_lib.c
src/profile/: Kconfig
src/profile/tinyrc/: Kconfig  tinyrc.c  tinyrc_shell.c
